--- a/src/MSBuild/Resources/xlf/Strings.pt-BR.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.pt-BR.xlf
@@ -131,19 +131,27 @@ arquivo de resposta.
     </note>
       </trans-unit>
       <trans-unit id="HelpMessage_35_IsolateProjectsSwitch">
-        <source>  -isolateProjects[:True|Message|False]
-                     Causes MSBuild to build each project in isolation.
+        <source>
+      -isolateProjects[:True|MessageUponIsolationViolation|False]
+      Causes MSBuild to build each project in isolation.
 
-                     This is a more restrictive mode of MSBuild as it requires
-                     that the project graph be statically discoverable at
-                     evaluation time, but can improve scheduling and reduce
-                     memory overhead when building a large set of projects.
-                     (Short form: -isolate)
+      This is a more restrictive mode of MSBuild as it requires
+      that the project graph be statically discoverable at
+      evaluation time, but can improve scheduling and reduce
+      memory overhead when building a large set of projects.
+      (Short form: -isolate)
 
-                     When set to Message, all isolation violations are
-                     logged as messages.
+      When set to MessageUponIsolationViolation
+      (or its short form Message), all isolation violations are
+      logged as messages and, if -orc is supplied,
+      only the results from specific (usually top-level)
+      targets are serialized. This is to mitigate
+      the chances of an isolation-violating target on
+      a dependency project using incorrect state due
+      to its dependency on a cached target whose
+      side effects would not be taken into account.
 
-                     This flag is experimental and may not work as intended.
+      This flag is experimental and may not work as intended.
     </source>
         <target state="needs-review-translation">  -isolateProjects[:True|Message|False]
                      Faz o MSBuild compilar cada projeto
@@ -1034,7 +1042,8 @@ isoladamente.
         <note>
       {StrBegin="MSBUILD : error MSB1056: "}
       UE: This message does not need in-line parameters because the exception takes care of displaying the invalid arg.
-      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString, IsolateProjects.Message.toString(), or Boolean.FalseString.
+      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString,
+      ProjectIsolationMode.MessageUponIsolationViolation.toString(), or Boolean.FalseString.
       LOCALIZATION: The prefix "MSBUILD : error MSBxxxx:" should not be localized.
     </note>
       </trans-unit>
