--- a/src/MSBuild/Resources/xlf/Strings.de.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.de.xlf
@@ -130,27 +130,26 @@
     </note>
       </trans-unit>
       <trans-unit id="HelpMessage_35_IsolateProjectsSwitch">
-        <source>
-      -isolateProjects[:True|MessageUponIsolationViolation|False]
-      Causes MSBuild to build each project in isolation.
+        <source>  -isolateProjects[:True|MessageUponIsolationViolation|False]
+                     Causes MSBuild to build each project in isolation.
 
-      This is a more restrictive mode of MSBuild as it requires
-      that the project graph be statically discoverable at
-      evaluation time, but can improve scheduling and reduce
-      memory overhead when building a large set of projects.
-      (Short form: -isolate)
+                     When set to MessageUponIsolationViolation
+                     (or its short form Message), all isolation violations are
+                     logged as messages and, if -orc is supplied,
+                     only the results from specific (usually top-level)
+                     targets are serialized. This is to mitigate
+                     the chances of an isolation-violating target on
+                     a dependency project using incorrect state due
+                     to its dependency on a cached target whose
+                     side effects would not be taken into account.
 
-      When set to MessageUponIsolationViolation
-      (or its short form Message), all isolation violations are
-      logged as messages and, if -orc is supplied,
-      only the results from specific (usually top-level)
-      targets are serialized. This is to mitigate
-      the chances of an isolation-violating target on
-      a dependency project using incorrect state due
-      to its dependency on a cached target whose
-      side effects would not be taken into account.
+                     This is a more restrictive mode of MSBuild as it requires
+                     that the project graph be statically discoverable at
+                     evaluation time, but can improve scheduling and reduce
+                     memory overhead when building a large set of projects.
+                     (Short form: -isolate)
 
-      This flag is experimental and may not work as intended.
+                     This flag is experimental and may not work as intended.
     </source>
         <target state="needs-review-translation">  -isolateProjects[:True|Message|False]
                      Führt dazu, dass MSBuild jedes Projekt isoliert erstellt.
@@ -655,10 +654,8 @@ Beispiel:
       <trans-unit id="HelpMessage_InputCachesFiles">
         <source>  -inputResultsCaches:&lt;cacheFile&gt;...
                      Semicolon separated list of input cache files that MSBuild
-                     will read build results from.
-                     If the isolation mode is set to
-                     IsolateProjects.False, this sets the isolation mode to
-                     IsolateProjects.True. (-isolate). (short form: -irc)
+                     will read build results from. If -IsolateProjects is set
+                     to False, this sets it to True. (short form: -irc)
    </source>
         <target state="needs-review-translation">  -inputResultsCaches:&lt;cacheFile&gt;...
                      Durch Semikolons getrennte Liste von Eingabecachedateien, aus denen MSBuild
@@ -675,9 +672,8 @@ Beispiel:
         <source>  -outputResultsCache:[cacheFile]
                      Output cache file where MSBuild will write the contents of
                      its build result caches at the end of the build.
-                     If the isolation mode is set to
-                     IsolateProjects.False, this sets the isolation mode to
-                     IsolateProjects.True. (-isolate). (short form: -orc)
+                     If -IsolateProjects is set to False, this sets it to True.
+                     (short form: -orc)
    </source>
         <target state="needs-review-translation">  -outputResultsCache:[Cachedatei]
                      Ausgabecachedateien, in die MSBuild am Ende des Buildvorgangs die Inhalte
@@ -1041,8 +1037,8 @@ Beispiel:
         <note>
       {StrBegin="MSBUILD : error MSB1056: "}
       UE: This message does not need in-line parameters because the exception takes care of displaying the invalid arg.
-      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString,
-      ProjectIsolationMode.MessageUponIsolationViolation.toString(), or Boolean.FalseString.
+      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent
+      to Boolean.TrueString, ProjectIsolationMode.MessageUponIsolationViolation.toString(), or Boolean.FalseString.
       LOCALIZATION: The prefix "MSBUILD : error MSBxxxx:" should not be localized.
     </note>
       </trans-unit>
